--- a/Styles/variables-fonts.css
+++ b/Styles/variables-fonts.css
@@ -25,6 +25,7 @@ body {
     --shadow-bg-gen: #808080;
     --text-primary-color: #b08968;
     --text-secondary-color: #808080;
+    --wishlisted-color: #FF0000;
 
 
 
