--- a/Styles/utilites.css
+++ b/Styles/utilites.css
@@ -13,11 +13,23 @@
     justify-content: space-between;
 }
 
+.flex-justify-center {
+    justify-content: center;
+}
+
 .flex-align-center {
     align-items: center;
+}
+
+.flez-wrap {
+    flex-wrap: wrap;
 }
 
 .btn-full-width {
     width: 100%;
     margin: 2rem 0;
+}
+
+.text-center {
+    text-align: center;
 }
