--- a/Styles/utilites.css
+++ b/Styles/utilites.css
@@ -33,3 +33,11 @@
 .text-center {
     text-align: center;
 }
+
+.grid {
+    display: grid;
+}
+
+.grid-2 {
+    grid-template-columns: auto 1fr;
+}
